--- a/gb/23/9/8/n14069694.md
+++ b/gb/23/9/8/n14069694.md
@@ -8,6 +8,7 @@
 <hr>
 	<p>【大纪元2023年09月08日讯】（大纪元记者于丽丽纽约报导）一个来自西方的女子如何展现<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>之美？</p>
 <p>9月7日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>舞蹈演员、参加第十届新唐人“全世界<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>大赛”的李恩慈（Grace Rubacek）向大纪元记者讲述了她的比赛剧目以及作为一个西方人是如何面对学习中国古典舞的挑战的。</p>
+<figure id="attachment_14069841" aria-describedby="caption-attachment-14069841" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14069841-2309080914402483.jpg"><img class="size-large wp-image-14069841" title="" src="https://i.epochtimes.com/assets/uploads/2023/09/id14069841-2309080914402483-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14069841" class="wp-caption-text">2023年9月7日，第十届新唐人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%A8%E4%B8%96%E7%95%8C%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E%E5%A4%A7%E8%B5%9B.md#1">全世界中国古典舞大赛</a>初赛在美国纽约州帕切斯学院表演艺术中心举行。图为少年女子组参赛选手李恩慈表演舞蹈《春?满园》。（戴兵／大纪元）</figcaption></figure>
 <p>李恩慈介绍，她在比赛剧目中想表达的是一个小女孩在大自然中探寻美的主题。</p>
 <p>“我真的感觉到就像是在大自然中漫步，神清气爽。就像是在森林中漫游，非常的自由自在和轻松。（展现）探寻大自然的那种美丽。”</p>
 <p>“我尝试通过这个舞蹈来表达人物内敛的性格。比如，一开始，她不确定自己身在何处，有点害怕，有点害羞，随着舞蹈的进行，她感觉自己就像是在大自然中，逐渐放开。对一切都很好奇。”</p>
@@ -31,45 +32,40 @@
 <p>“和其它地方相比，这里是非常令人惊叹的。这里，就像是你的第二个家一样。因为每个人总是在帮助别人，寻找更好的互相配合的方式。这也让我们进步得非常快。”</p>
 <p>责任编辑：李辰#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065550.md#1">【直播预告】新唐人全世界中国古典舞大赛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065550.md#1">【直播】新唐人全世界中国古典舞决赛</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068966.md#1">第十届新唐人全世界中国古典舞大赛开赛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069415.md#1">用心演绎历史人物 少年组选手分享参赛心得</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069382.md#1">台湾参赛少年：放下自我 融入角色</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146954.md#1">民主党区领袖于金山服务处 新春联欢会两百余人同庆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146809.md#1">纽约跨年夜无可信攻击威胁 市警局：对示威有准备</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">巴黎欧莱雅彩妆 自然光泽 打造全天容光焕发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066098.md#1">奥地利女子转生为邻居的儿子 过世前就预告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044075.md#1">【古道人生】秀才行善得亡灵指点 接连及第成进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066374.md#1">【未解之谜】深度解读《黄檗禅师诗》（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064596.md#1">秋诗一篇典故隽永 七月流火到底是什么“火”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068329.md#1">【百年真相】青海221厂 黑暗核基地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069491.md#1">【全球新闻】一带一路十周年 盘点中共留下的祸害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069039.md#1">【舞蹈】飞天艺术学院2023第一学期舞蹈考试（高班 男生）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067879.md#1">神秘X账号发习近平父女“自拍照” 引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068050.md#1">习曾斗延烧北戴河？分析：习确实在内部受压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067728.md#1">人民币兑美元再次跌破7.3关口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067715.md#1">梁朝伟31年前曾喊36岁退休 背后真实原因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068343.md#1">《好声音》风波未停 那英参加新综艺节目惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067683.md#1">6岁女儿展画画天分 林心如自嘲：绝不是遗传我</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068384.md#1">何炅遭实名举报拖欠保姆工资 爆料人删除动态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068312.md#1">陆剧《理想之城》制片人梁亚斌骤逝 得年30岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066881.md#1">为好茶添滋味 试着加入这些食材吧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068014.md#1">12星座的饲主最喜欢哪种狗？ 美国调查揭密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068425.md#1">日本名医自创“断糖饮食法” 3个月减34斤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060965.md#1">孩子表现不好 竟和父母大脑有关？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068733.md#1">美国医生示警 这是会加速老化的头号原因</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137969.md#1">美国防承包商称 蛋形UFO曾保存在51区</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127129.md#1">奉天命助圣王治世 百日为相白马化龙（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141715.md#1">【全球新闻】前央视喉舌王志安被起底 中共大外宣被看穿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141713.md#1">【晚间新闻】盘点2024年美中关系对抗焦点</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140545.md#1">【百年真相】一把火烧80吨 中共三次焚书运动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140113.md#1">中共国安插足经济引内讧 与胡锡进互怼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140579.md#1">中共告诉拜登将统一台湾 白宫回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140541.md#1">国务院智囊公开承认：历史留给中共时间已不多</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139785.md#1">杨幂着15公斤礼服 累到在电梯里两度面壁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139880.md#1">两次被主持人说错一电影名 梁朝伟一脸尴尬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140599.md#1">为妻治病花光积蓄且欠债 港导演彭发申请破产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：法国传奇 爱马仕香水年终5折酬宾</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">旅行必备：旅行电源板3个USB 2个插座  41%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130699.md#1">蜂蜜止咳胜抗生素 五代中医传人: 这样吃很有效</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140144.md#1">睡前想什么会影响睡眠？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139698.md#1">预防第2大夺命癌症 早做一件事生存率超9成</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/8/n14069694.htm">西方人跳中国舞：只要你决心学 就能做到</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069694.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
